Word wrapping fix

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -1,3 +1,5 @@
+.longtext { word-wrap: break-word; }
+
 .cbp_tmtimeline > li .cbp_tmicon { left: 15% }
 .cbp_tmtimeline:before { left: 15%; }
 .cbp_tmtimeline > li .cbp_tmtime { width: 20%; }
